# spotify-vinyl-player

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.vue  CallbackPage.vue  Login.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
